delete getFirst